# CSX_code

./: README.md
week--1/: hw1.R  hw1.gn  hw1_gn.R  practice 1.R  practice 2.R  practice 3.R
week--2/: README.md  hw_OOXX(undone).R  r_crawler_sv.R  r_crawler_sv.Rmd  r_crawler_sv.html  rmd_example.html
week--2/practice/: practice_1.R  practice_2.R  test_data.R
week--3/: README.md  ggmap(undone).R  visalize.Rmd  visalize.html
week--4/: README.md  wordcloud.R  wordcloud.html  wordcloud.rmd
week--4/data/: 2144.txt  2145.txt  2146.txt  2147.txt  2148.txt  2149.txt  2150.txt  2151.txt  2152.txt  2153.txt  2154.txt  2155.txt  2156.txt  2157.txt  2158.txt  2159.txt  2160.txt  2161.txt  2162.txt  2163.txt  2164.txt
